# stock_market_monitor

./: .gitignore  README.md
stock_market_monitor/: .gitignore  Cargo.toml
stock_market_monitor/src/: main.rs  plots.html
