[package]
name = "stock_market_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yahoo_finance_api = "2.1.0"
time = "0.3.34"
tokio-test = "0.4.3"
plotters = "0.3.4"
chrono = "0.4.34"
clap = { version = "4.5.0", features = ["derive"] }
